*Empty MediaWiki Message*

--- a/Ç.mw
+++ b/Ç.mw
@@ -1,4 +1,4 @@
-'''Ç ç''' - Zemaneviy [[Qırımtatar latin elifbesi]]niñ dördünci [[arif|arfidir]]. Bu arif er bir [[Latin elifbesi]]niñ qullanğan tiline kirmeydir. Onıñ icün Ch ([[İngliz tili]]nde), Tsch ([[Alman tili]]nde), Cs ([[Macar tili]]nde), Cz ([[Leh tili]]nde) Τς ([[Yunan tili]]nde) kibi yazıla.
+'''Ç ç''' - zemaneviy [[Qırımtatar latin elifbesi]]niñ dörtünci [[arif|arfidir]]. Qırımtatar imlâsında {{IPA|[ʧ]}} sesini ifade ete. Bu arif er bir [[Latin elifbesi]]niñ qullanğan tiline kirmeydir. Başqa tillerde {{IPA|[ʧ]}} sesi '''ch''' ([[İngliz tili]]nde), '''tsch''' ([[Alman tili]]nde), '''tch''' ([[Frenk tili]]nde), '''cs''' ([[Macar tili]]nde), '''cz''' ([[Leh tili]]nde) kibi yazıla.
 
 {{Qırımtatar latin elifbesi}}
 
