Change picture of flag of belgrade to Flag of Belgrade.png, because this Picture will be deleted on commons

--- a/Belgrad.mw
+++ b/Belgrad.mw
@@ -4,7 +4,7 @@
  |original adı =  Београд, Beograd
  |memleket = Sırbistan
  |gerb =  Coat of Arms Belgrade.png
- |bayraq =  Flagge Belgrad.PNG
+ |bayraq =  Flag of Belgrade.png
  |gerb eni =     
  |bayraq eni =  
  |lat_deg= 44|lat_min= 49|lat_sec=
