--- a/Yañı_Dünya.mw
+++ b/Yañı_Dünya.mw
@@ -1,3 +1,3 @@
-'''Yañı Dünya''', Qırımda neşir etilgen bir gazet.
+'''Yañı Dünya''', Qırımda kiril elifbesinen neşir etilgen bir gazet.
 
 [[Kategoriya:Gazetler]]
