--- a/Yañı_Dünya.mw
+++ b/Yañı_Dünya.mw
@@ -1,3 +1,6 @@
 '''Yañı Dünya''', Qırımda kiril elifbesinen neşir etilgen bir gazet.
 
+== Bağlantılar ==
+* [http://www.yanidunya.org/ Yañı Dünya gazeti]
+
 [[Kategoriya:Gazetler]]
