--- a/Qırım_gazeti.mw
+++ b/Qırım_gazeti.mw
@@ -1,3 +1,3 @@
-Qırım gazeti, [[Qırım]]da [[qırımtatar tili]]nde neşir etilgen gazetlerden biridir. 
+Qırım gazeti, [[Qırım]]da [[qırımtatar tili]]nde neşir etilgen gazetlerden biridir. Şimdilik kiril urufatında çıqarıla.
 
 [[Kategoriya:Gazetler]]
