--- a/Yañı_Dünya.mw
+++ b/Yañı_Dünya.mw
@@ -1,4 +1,4 @@
-'''Yañı Dünya''', [[Qırım]]da neşir etilgen bir gazettir. Şimdilik kiril urufatında çıqarıla.
+'''Yañı Dünya''', [[Qırım]]da [[qırımtatar tili]]nde neşir etilgen bir gazettir. Şimdilik kiril urufatında çıqarıla.
 
 == Bağlantılar ==
 * [http://www.yanidunya.org/ Yañı Dünya gazeti]
