--- a/Çankırı_(il).mw
+++ b/Çankırı_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Cankiri Turkey Provinces locator.jpg|300px|thumb|Çankırı vilâyeti]]
+[[Image:Çankırı_Turkey_Provinces_locator.jpg|300px|thumb|Çankırı vilâyeti]]
 '''Çankırı''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
