--- a/Çanakkale_(il).mw
+++ b/Çanakkale_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Canakkale Turkey Provinces locator.jpg|300px|thumb|Çanakkale vilâyeti]]
+[[Image:Çanakkale_Turkey_Provinces_locator.jpg|300px|thumb|Çanakkale vilâyeti]]
 '''Çanakkale''' - ({{Lang-tr|Çanakkale}}) [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
