--- a/Yaqub_Şakir-Ali.mw
+++ b/Yaqub_Şakir-Ali.mw
@@ -1,13 +1,13 @@
-'''Yaqup Şakir Ali''' ([[1890]]-[[1930]]), [[Bağçasaray]]da doğdı. Babası da şair edi. Bağçasaraydaki orta mektepni bitirgen soñ, 1905 senesinde [[Terciman]] gazetasında çalışmağa başladı. 1916 senesinden vefatına qadar deñişik yerlerde muallimlik yasadı.
+'''Yaqup Şakir-Ali''' ([[1890]]-[[1930]]) - [[qırımtatar]] şairi. 1890 s. [[Bağçasaray]]da doğdı. Babası da şair edi. Bağçasaraydaki orta mektepni bitirgen soñ, 1905 senesinde [[Terciman]] gazetasında çalışmağa başladı. 1916 senesinden vefatına qadar deñişik yerlerde muallimlik yasadı.
 
 İlk şiirleri Terciman gazetasında çalışa ekende neşir etilgen şairniñ, 1917 senesinde “Duyğularım” adında şiir kitabı basıldı.
 
-“Oqu Yaz” (1915), “Mektep ve Milliy Dil” (1916) kibi kimi şiirleri, oquvnıñ, talim-terbiyeniñ müim olğanını, ahalini caillikten qurtarma maqsadını kösterir. Kimi şiirlerinde perişanlıq, boş-boğazlıq kibi cemaatnen alâqalı mevzularnı işlegendir. “Qış” (1914), “Tan” (1917) “Deñiz ile Yel”, (1917) kibi manzumelerinde tabiat adiseleri işlengendir.
+“Oqu Yaz” (1915), “Mektep ve Milliy Til” (1916) kibi kimi şiirleri, oquvnıñ, talim-terbiyeniñ müim olğanını, ahalini caillikten qurtarma maqsadını kösterir. Kimi şiirlerinde perişanlıq, boş-boğazlıq kibi cemaatnen alâqalı mevzularnı işlegendir. “Qış” (1914), “Tan” (1917) “Deñiz ile Yel”, (1917) kibi manzumelerinde tabiat adiseleri işlengendir.
 
 == Menbalar ==
 *[http://ekitap.kulturturizm.gov.tr T.C Kültür ve Turizm Bakanlığı E-Kitap]
 
-{{DEFAULTSORT:Ali, Yaqup Şakir}}
+{{DEFAULTSORT:Şakir Ali, Yaqup}}
 [[Kategoriya:Şairler]]
 [[Kategoriya:1890 senesinde doğğanlar]]
 [[Kategoriya:1930 senesinde ölgenler]]
