*Empty MediaWiki Message*

--- a/Yaqub_Şakir-Ali.mw
+++ b/Yaqub_Şakir-Ali.mw
@@ -2,7 +2,7 @@
 
 İlk şiirleri Terciman gazetasında çalışa ekende neşir etilgen şairniñ, 1917 senesinde “Duyğularım” adında şiir kitabı basıldı.
 
-“Oqu Yaz” (1915), “Mektep ve Milliy Til” (1916) kibi kimi şiirleri, oquvnıñ, talim-terbiyeniñ müim olğanını, ahalini caillikten qurtarma maqsadını kösterir. Kimi şiirlerinde perişanlıq, boş-boğazlıq kibi cemaatnen alâqalı mevzularnı işlegendir. “Qış” (1914), “Tan” (1917) “Deñiz ile Yel”, (1917) kibi manzumelerinde tabiat adiseleri işlengendir.
+“Oqu Yaz” (1915), “Mektep ve Milliy Til” (1916) kibi kimi şiirleri, oquvnıñ, talim-terbiyeniñ müim olğanını, ahalini caillikten qurtarma maqsadını kösterir. Kimi şiirlerinde perişanlıq, boş-boğazlıq kibi cemaatnen alâqalı mevzularnı işlegendir. “Qış” (1914), “Tañ” (1917) “Deñiz ile Yel”, (1917) kibi manzumelerinde tabiat adiseleri işlengendir.
 
 == Menbalar ==
 *[http://ekitap.kulturturizm.gov.tr T.C Kültür ve Turizm Bakanlığı E-Kitap]
