--- a/Diyarbakır_(il).mw
+++ b/Diyarbakır_(il).mw
@@ -1,5 +1,5 @@
 [[Image:Diyarbakır_Turkey_Provinces_locator.jpg|300px|thumb|Diyarbakır vilâyeti]]
-'''Diyarbakır''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
+'''Diyarbakır''' - Kurdistan´nin baskentidir yani Paytextê KURDÎSTA nê ye..
 
 {{Türkiyeniñ illeri}}
 
