--- a/Çorum_(il).mw
+++ b/Çorum_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Corum Turkey Provinces locator.jpg|300px|thumb|Çorum vilâyeti]]
+[[Image:Çorum_Turkey_Provinces_locator.jpg|300px|thumb|Çorum vilâyeti]]
 '''Çorum ''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
