--- a/Elazığ_(il).mw
+++ b/Elazığ_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Elazig Turkey Provinces locator.jpg|300px|thumb|Elazığ vilâyeti]]
+[[Image:Elazığ_Turkey_Provinces_locator.jpg|300px|thumb|Elazığ vilâyeti]]
 '''Elazığ''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
