*Empty MediaWiki Message*

--- a/Osmanlı_Devleti.mw
+++ b/Osmanlı_Devleti.mw
@@ -35,6 +35,12 @@
 |stat_pop4    = 14 629 000
 |stat_year5   = 1592
 |stat_area5   = 19 902 191
+|stat_year6   = 1700
+|stat_area6   = 15 914 606
+|stat_year7   = 1750
+|stat_area7   = 15 538 000
+|stat_year8   = 1800
+|stat_area8   = 12 187 705
 |Para birlemi = [[Aqçe]], [[Quruş]], [[Osmanlı Lirası]]
 }}
 '''Osmanlı Devleti''', resmiy ad '''Osmanlı Aliy Devleti''' (оsmanlıca: دولت عثمانيه  - ''Devlet-i Osmâniyye'', دولت عاليه عثمانيه - ''Devlet-i Âliye-i Osmâniyye'') — XIII—XX asırlarında yaşağan Şarqiy [[Avropa]], Ğarbiy [[Asiya]] ve Şimaliy [[Afrika]]daki bir devlet. Osmanlı Devletiniñ doğrudan merkezden idare etilgen [[eyalet]]ler, özüne tabi devletler, imaye altına alğan devletleri, bergige bağlağan devletleri ve [[hilâfet]]en özüne bağlanğan coğrafiyalar ile birlikte 623 yıllıq ömründe farqlı devirlerde mustaqillik qurğanı alğan 50 million km² keçe.
