--- a/Eskişehir.mw
+++ b/Eskişehir.mw
@@ -1,4 +1,4 @@
-[[Image:Eskisehir Turkey Provinces locator.jpg|300px|thumb|Eskişehir vilâyeti]]
+[[Image:Eskişehir_Turkey_Provinces_locator.jpg|300px|thumb|Eskişehir vilâyeti]]
 
 '''Eskişehir''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
