--- a/Hansaray.mw
+++ b/Hansaray.mw
@@ -1,5 +1,7 @@
 '''Hanasaray''' - [[Bağçasaray]] şeerinde bulunğan [[Qırım Hanlığı|Qırım hanlarınıñ]] sarayıdır.
 
+[[Resim:Hansaray.jpg|thumb|right|270px|Hansaray]]
+
 Qırımda Hansaraydan ğayrı hanlarnıñ daa beş sarayı bar edi. Olar arasında Devlet Saray, Ulaqlı Saray, Alma Saray, Qaçı Saray ve Süyren Saray. Amma bu saraylar şeer çetinde yerleşe edi. Hanlarnıñ merkezi ise er daim Bağçasaray qala edi. 
 
 Eki yarım asır devamında Hansaray hanlarnıñ merkezi sayılğan vaqtında Saraynıñ tış qıyafeti çoq deñişti. Tahtqa saylanğan er bir han özüne saray sıfatında ebediy eykeller qura edi. Çeşit-türlü tamir işleri alıp barıla edi. Bazı birlerni şimdi de körmek mümkün. 
