--- a/Kırklareli_(il).mw
+++ b/Kırklareli_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Kirklareli Turkey Provinces locator.jpg|300px|thumb|Kırklareli vilâyeti]]
+[[Image:Kırklareli_Turkey_Provinces_locator.jpg|300px|thumb|Kırklareli vilâyeti]]
 '''Kırklareli''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
