--- a/Kırıkkale_(il).mw
+++ b/Kırıkkale_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Kirikkale Turkey Provinces locator.jpg|300px|thumb|Kırıkkale vilâyeti]]
+[[Image:Kırıkkale_Turkey_Provinces_locator.jpg|300px|thumb|Kırıkkale vilâyeti]]
 '''Kırıkkale''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
