robot  ekley: [[cv:Гайевник Колоня]], [[ksh:Gajewniki-Kolonia]]

--- a/Gayevniki-Kolonya.mw
+++ b/Gayevniki-Kolonya.mw
@@ -3,7 +3,9 @@
 [[Kategoriya:Lehistan]]
 
 [[az:Gayevniki-Kolonya]]
+[[cv:Гайевник Колоня]]
 [[en:Gajewniki-Kolonia]]
+[[ksh:Gajewniki-Kolonia]]
 [[mk:Гајевњиќи-Колоња]]
 [[pl:Gajewniki-Kolonia]]
 [[ru:Гаевники-Колёня]]
