--- a/Bağçasaray.mw
+++ b/Bağçasaray.mw
@@ -54,8 +54,8 @@
 [[Resim:Baghchasarayda bir araliq.jpg|thumb|left|200px|Bağçasaraynıñ eski şeerindeki bir aralıq]]
 
 == Coğrafiya ==
-=== İklim ===
-İklimi yarım qurğaqlı, issidir, yımşaq qış ile. [[Yanvar]]niñ orta arareti +0,3 °C, [[İyül]]niñ orta arareti +21,7 °C. Yağanaqlarnıñ orta yıllıq derecesi 500 mm. 
+=== İqlim ===
+İqlimi yarım qurğaqlı, issidir, yımşaq qış ile. [[Yanvar]]niñ orta arareti +0,3 °C, [[İyül]]niñ orta arareti +21,7 °C. Yağanaqlarnıñ orta yıllıq derecesi 500 mm. 
 
 == Tarih ==
 
