--- a/İsmail_Gasprinskiy.mw
+++ b/İsmail_Gasprinskiy.mw
@@ -1,7 +1,7 @@
-'''İsmail Mustafa oğlu Gasprinskiy (Gaspıralı, Gaspralı)''' ({{Lang-crh-ar|اسماعیل مصطفى اوغلى گاسپرينسكى}}) (1851 – 1914) - ulu qırımtatar mütefikkirdir.
+'''İsmail Mustafa oğlu Gasprinskiy (Ğaspıralı, Ğaspralı)''' ({{Lang-crh-ar|اسماعیل مصطفى اوغلى گاسپرينسكى}}) (1851 – 1914) - ulu qırımtatar mütefikkirdir.
 
 == Soyadı yazılışları (variantları) ==
-İsmail beyniñ soyadınıñ üç türlü variantı qullanılmaqtadır: Gasprinskiy, Gaspıralı, Gaspralı. [[Qırım]]daki Qırımtatar matbuatında onıñ soyadı Gasprinskiy (daa sıq) ve Gaspralı (daa siyrek) olaraq yazılğandır. [[Türkiye]]deki Qırımtatarca neşirlerde çoqusı vaqıt Gaspıralı olaraq yazılır. [[Qırımtatar Milliy Meclisi]]niñ saytında ise olarnıñ er birinen qarşılaşmaq mümkündir, lâkin Gaspıralı ve Gaspralı yazılışları biraz daa sıq rastkele. [[Aqmescit]]teki [[Qırımtatar Milliy Kitaphanesi]] Gasprinskiy adını taşıy, amma bazı maqaleler o kitaphane içün de diger soyadı variantlarını qullana. İsmail beyniñ abidesinde (resimde) soyadı Gasprinskiy olaraq, ev-müzeyi ögündeki [http://www.youtube.com/watch?v=JeZ_ISzWxLI levhalarda] ise Gaspralı ve Gaspıralı olaraq yazılğandır. İsmail bey özü ise öz soyadını گاسپرينسكى (yani Gasprinskiy) olaraq yazğan edi.
+İsmail beyniñ soyadınıñ üç türlü variantı qullanılmaqtadır: Gasprinskiy, Ğaspıralı, Ğaspralı. [[Qırım]]daki Qırımtatar matbuatında onıñ soyadı Gasprinskiy (daa sıq) ve Ğaspralı (daa siyrek) olaraq yazılğandır. [[Türkiye]]deki Qırımtatarca neşirlerde çoqusı vaqıt Gaspıralı olaraq yazılır. [[Qırımtatar Milliy Meclisi]]niñ saytında ise olarnıñ er birinen qarşılaşmaq mümkündir, lâkin Gaspıralı ve Gaspralı yazılışları biraz daa sıq rastkele. [[Aqmescit]]teki [[Qırımtatar Milliy Kitaphanesi]] Gasprinskiy adını taşıy, amma bazı maqaleler o kitaphane içün de diger soyadı variantlarını qullana. İsmail beyniñ abidesinde (resimde) soyadı Gasprinskiy olaraq, ev-müzeyi ögündeki [http://www.youtube.com/watch?v=JeZ_ISzWxLI levhalarda] ise Gaspralı ve Gaspıralı olaraq yazılğandır. İsmail bey özü ise öz soyadını گاسپرينسكى (yani Gasprinskiy) olaraq yazğan edi.
 
 == Tercimeial ==
 [[Resim:Ismail Gaspirali.jpg|thumb|250px|İsmail Gasprinskiy]]
