--- a/Bağçasaray_rayonı.mw
+++ b/Bağçasaray_rayonı.mw
@@ -133,8 +133,11 @@
 
 {{Qırım haritası - Regionlar}}
 
-{{Qırımdaki regionlar‎}}
+== Bağlantılar ==
 
+* http://bakhchisaray.com.ua/
+
+{{Qırımdaki regionlar‎}}
 
 [[Category:Qırım Muhtar Cumhuriyeti]]
 
