--- a/Hansaray.mw
+++ b/Hansaray.mw
@@ -6,9 +6,10 @@ Qırımda Hansaraydan ğayrı hanlarnıñ daa beş sarayı bar edi. Olar arasın
 
 Eki yarım asır devamında Hansaray hanlarnıñ merkezi sayılğan vaqtında Saraynıñ tış qıyafeti çoq deñişti. Tahtqa saylanğan er bir han özüne saray sıfatında ebediy eykeller qura edi. Çeşit-türlü tamir işleri alıp barıla edi. Bazı birlerni şimdi de körmek mümkün. 
 
-[[I Sahib Geray]] adına qurlğan eykel olaraq Bağçasaray şeeri dep saymaq mümkün. [[I Devlet Geray]] tahtta bulunğan vaqıt Sarayda ilki dürbe quruldı, [[III İslâm Geray]] vaqtında – ekinci dürbe ve toplaşuvlar içün oda. [[I Bahadır Geray]] idareliginde – resmiy musafirlerni qabul etmek içün oda. [[I Qaplan Geray]] ise Altın çeşmeni qurıp öz adını ebediyleştirdi. [[II Selâmet Geray]], hanlar sarayı sıñırlarında qamere qurdurdı. Bu ve Büyük Han Camisiniñ ögünde qurulğan yadikârlıqlar onıñ adını taşıy. Bu cami yanğınğa oğradı, amma han onı tamirletip, ğayrıdan tüzetti. [[Arslan Geray]] han ise bu caminiñ yañında medrese qurdurdı. Qırım Geray – Dilâra bikeç dürbesini, [[Közyaş çeşmesi]]ni qurdurdı. XVII asırda yaşağan türk seyaatçı aytqanına köre: “Er bir bina bir de bir han tarafından quruldı”. Hanlar Sarayı – [[Geraylar]]nıñ yılnamesidir. Ve bu sülâleniñ er bir temsilcisi onıñ müteşemligine öz issesini qoştı, desek, yañılmamız.
+[[I Sahib Geray]] adına qurlğan eykel olaraq Bağçasaray şeeri dep saymaq mümkün. [[I Devlet Geray]] tahtta bulunğan vaqıt Sarayda ilki dürbe quruldı, [[III İslâm Geray]] vaqtında – ekinci dürbe ve toplaşuvlar içün oda. [[I Bahadır Geray]] idareliginde – resmiy musafirlerni qabul etmek içün oda. [[I Qaplan Geray]] ise Altın çeşmeni qurıp öz adını ebediyleştirdi. [[II Selâmet Geray]], hanlar sarayı sıñırlarında qamere qurdurdı. Bu ve Büyük Han Camisiniñ ögünde qurulğan yadikârlıqlar onıñ adını taşıy. Bu cami yanğınğa oğradı, amma han onı tamirletip, ğayrıdan tüzetti. [[Arslan Geray]] han ise bu caminiñ yanında medrese qurdurdı. [[Qırım Geray]] – Dilâra bikeç dürbesini, [[Közyaş çeşmesi]]ni qurdurdı. XVII asırda yaşağan türk seyaatçı aytqanına köre: “Er bir bina bir de bir han tarafından quruldı”. Hanlar Sarayı – [[Geraylar]]nıñ yılnamesidir. Ve bu sülâleniñ er bir temsilcisi onıñ müteşemligine öz issesini qoştı, desek, yañılmamız.
 
 Vaqıt keçkeninen mimarcılıq ve örnek üslüpleri deñişe. XVII asırda keniş olğan divar yazuvlarnıñ sade örnekleri yüzüm salqımlarnı ve mermer taşlarını aks etken. XVIII asırda ise saray ressamları “Qırım rokoko” üslübinde mürekkep tizilişlerni yaratqanlar. XVI asırda tantanalar içün salonlar qura ediler, XVIII asırda ise olarnıñ yerine yengil nazik binalar peyda olıp başladı. Bu cedvelni daa çoq devam etmek mümkün: Saraynıñ diqqatlı ögrenüvi qırımtatar mimarcılıq sanatında üslüplerniñ ardı-sıralığını kösterir.
+
 Hanlarnıñ soñkisi, [[Şahin Geray]], tarihqa büyük avantürist olaraq kirgen han, Qırımnıñ paytahtını Bağçasaraydan [[Kefe]]ge avuştırmaq niyetinde edi. Atta anda yañı saray qurmağa başladı, amma 1783 senesi ükümdarlığını coyıp, istegini amelge keçirmedi. 
 
 [[Rusiye İmperiyası|Çarlıq Rusiye]] devrinde Saray İçki İşler Nazirligi tarafından idare etile edi. Ara-sıra Saraynı padişalar ve çar qorantanıñ temsilcileri ziyaret ete ediler. Tabiiy ki, şu sebepten Saray er kes içün açıq degil edi. İstisna olaraq [[Qırım cenki]] vaqtında (1854-1855 ss.) mında arbiy hastahane yerleşti. 
@@ -21,6 +22,7 @@ Qırımtatar milliy müzeyi halqnıñ tek milliy ve dinniy merkezi degil de, siy
 Saray – nadir ve müteşem mimarcılıq sanatınıñ abidesi, amma şimdi bizim ögünimizde tek eskiden qalğan bir izdir. [[Kristof Minih|Feldmarşal Minihniñ]] tarafından 1736 s. yaqılğan Hansarayğa pek büyük zarar ketirildi. Amma [[II Selâmet Geray]] ve başqa hanlar tez vaqıtta bütün ziyanlarnı yoq ettiler. Lâkin episi bir, 1783 senesi mında alıp barılğan çoqtan-çoq tamir işleri, Sarayğa zarardan ğayrı iç bir yahşı şey ketirmediler.
  
 Tamir işlerniñ tarihı 1787 senesinden başlana. O sene Bağçasaraynı [[II Yekaterina]]nıñ ziyaretine azırlay ediler. Bu tamir işleri çar qorantasınıñ temsilceleri kelgen vaqıtları da alıp barıla edi. Çoqusı allarda, tüzetme işleri bu saada mütehassıs olmağan insanlar ile alıp barıla edi. İşni usta başlağanda ise – olar yerli mimarcılıq adetlerinen meraqlanmay ediler. İşke ise öz ölçülerinen qatnaşa ediler. Neticede, Hansaraynıñ içki qıyafeti Avropanıñ hucur üslübine beñzep, bugünki künümizge onıñ eñ beterli izarında yetip keldi. Çünki belli olğanı kibi, Hansraynıñ “tamir” işlerini bu meselede mütehassıs olmağan unter-ofitserler yaptılar. Eski binalar, tamir yerine, yıqıla edi. Meselâ, 1820 seneleri Kolodin adlı mimarcı dört binalı aremniñ üç binasını yıqtı – Qışlıq sarayını, ammam hanelerni ve daa çoq emiyetli inşaatlarnı yoq etti. İşte, bu areketler neticesinde saraynıñ 18-gektarlıq dairesi 4 ga eksildi. 
+
 Hansaraynıñ temelli ilmiy tamirlenmesi tek 1960 yılları başladı. Onıñ neticesinde, künümizde bizler Hansaraynıñ tahminen ilki qurulğan yılları olğan qıyafetini köre bilemiz. 
 
 2003 senesi Sarayda kene de tamir-tüzetme işleri başlandı. Ustalar Hansaraynı ilki qiyafetine ketirmege isteyler.
