--- a/Bağçasaray.mw
+++ b/Bağçasaray.mw
@@ -78,7 +78,7 @@ Zemaneviy Bağçasaray meydanlığı tahminen teñ kelgen bölüklerden ibaretti
 Cenkten soñ [[Eski Yurt]], [[Aziz]], [[Aqçoqraq]] ve [[Salaçıq]] (Staroselye) köyleri şeerniñ terkibine kirsetildiler.
 
 == Mahsus itibarğa lâyıq yerler ==
-[[Hansaray]] - [[Geraylar|Qırım hanları]]nıñ sarayı Bağçasaraynıñ eñ müim tarihiy abidesidir. Saraydaki Közyaş çeşmesi [[Aleksandr Puşkin]]niñ «Bağçasaray çeşmesi» (rusça «Бахчисарайский фонтан») eserinde şereflengen. Şeerniñ yanında erkekler hristian keşişhanesi (Свято-Успенский монастырь) ve orta asırlardan qalma [[Çufut Qale]] (sıq qoba şeeri olaraq adlandırıla) bar.
+[[Hansaray]] - [[Geraylar|Qırım hanları]]nıñ sarayı Bağçasaraynıñ eñ müim tarihiy abidesidir. Saraydaki Közyaş çeşmesi [[Aleksandr Puşkin]]niñ “Bağçasaray çeşmesi” (rusça «Бахчисарайский фонтан») eserinde şereflengen. [[Salaçıq]] maallesinde [[Zıncırlı medrese]] ve onıñ yanındaki [[I Hacı Geray]]nıñ [[dürbe]]si buluna. Şeerniñ yanında erkekler hristian keşişhanesi (Свято-Успенский монастырь) ve orta asırlardan qalma [[Çufut Qale]] (sıq “qoba şeeri” olaraq adlandırıla) bar.
 
 == İçtimaiy saa ==
 Şeerde ihtisasiy oquv yurtu, qurucılıq tehnikumı, tabiat evi, seyaat ve kezintiler bürosı çalışalar.
