--- a/Bağçasaray.mw
+++ b/Bağçasaray.mw
@@ -96,6 +96,7 @@ Cenkten soñ [[Eski Yurt]], [[Aziz]], [[Aqçoqraq]] ve [[Salaçıq]] (Staroselye
 
 {{Bağçasaray rayonı}}
 
+[[Kategoriya:Bağçasaray| ]]
 [[Kategoriya:Qırımdaki şeerler]]
 
 [[cs:Bachčisaraj]]
