--- a/I_Hacı_Geray.mw
+++ b/I_Hacı_Geray.mw
@@ -1,8 +1,8 @@
-'''I Hacı Geray''' ya da '''Melek Hacı Geray''' ({{Lang-crh-ar|۱ حاجى گراى}}) - ilk Qırım hanıdır.
+'''I Hacı Geray''' ya da '''Melek Hacı Geray''' ({{Lang-crh-ar|۱ حاجى گراى}}) - ilk [[Qırım Hanlığı|Qırım hanıdır]].
 
-1428 s. ilk Qırım hanı Hacı Geray han Qırımdaki mustaqil ükümet oğrundaki küreşniñ faal iştirakçisi olıp çıqqan. Qırımnıñ [[Altın Ordu|Altın Ordudan]] boşatılması ve serbest siyaset alıp baruv meselesi çoqtan berli keskin turmaqta edi. Qırımnıñ mustaqilligi oğrunda küreşte Hacı Geray meşur Qırım sülâleleriniñ  ve beyleriniñ yardımına esaslandı. Amma duşmanlar da bir yerde turmadan, qarşılıq köstergenleri sebebinden bir qaç kere tahttan tüşürildi ve tek 1449 s. tekmil yekâne Qırım hanı oldı ve ta ölgence 1466 s. qadar tahtta bulundı.
+1428 s. ilk Qırım hanı Hacı Geray han Qırımdaki mustaqil ükümet oğrundaki küreşniñ faal iştirakçisi olıp çıqqan. Qırımnıñ [[Altın Ordu]]dan boşatılması ve serbest siyaset alıp baruv meselesi çoqtan berli keskin turmaqta edi. Qırımnıñ mustaqilligi oğrunda küreşte Hacı Geray meşur Qırım sülâleleriniñ  ve beyleriniñ yardımına esaslandı. Amma duşmanlar da bir yerde turmadan, qarşılıq köstergenleri sebebinden bir qaç kere tahttan tüşürildi ve tek 1441 s. tekmil yekâne Qırım hanı oldı ve ta ölgence 1466 s. qadar tahtta bulundı.
 
-Tarihiy elyazmlarda Hacı Geray istidatlı, ikmetli  ve öz halqını tüşüngen ve qayğırağan ükümdar olaraq kösterile. Atta halq arasında oña "Melek" adı berilgen. Hacı Geraynıñ müim ilk deñişmelerden biri – Qırımnıñ devlet merkeziniñ Eski Qırım şeerinden [[Qırq Yer]]ge keçirilmesidir. Neticede, qırımtatar milliy devletçiginiñ mükemmeleşmesinden ğayrı, kelecek onyıllıqlar devamında qırımtatar şeerleri qurulması ve medeniyetiniñ inkişafı ileriledi.
+Tarihiy elyazmlarda Hacı Geray istidatlı, ikmetli  ve öz halqını tüşüngen ve qayğırağan ükümdar olaraq kösterile. Atta halq arasında oña "Melek" adı berilgen. Hacı Geraynıñ müim ilk deñişmelerden biri – Qırımnıñ devlet merkeziniñ Qırım (şimdiki [[Eski Qırım]]) şeerinden [[Qırq Yer]]ge keçirilmesidir. Neticede, qırımtatar milliy devletçiginiñ mükemmeleşmesinden ğayrı, kelecek onyıllıqlar devamında qırımtatar şeerleri qurulması ve medeniyetiniñ inkişafı ileriledi.
 
 Aynı zamanda, Hacı Geray ile [[qırımtatar bayrağı]]ndaki [[Qırımtatar tamğası|tamğa-taraq]] bağlıdır. 
 
