*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -1,4 +1,5 @@
-"Bizim Qırım" adlı Halqara Cemaat Teşkilâtı 
+
+Bizim Qırım"Bizim Qırım" adlı Halqara Cemaat Teşkilâtı 
 
 
 Qırım - dünyanıñ en dülber, zengin köşelerinden biri olmaqnen bir arada, oñayıtlı ve geostratejik baqıştan mühim olğan bir regiondır. Qırım - iqtisadiy, harbiy ve siyasiy noqtai-nazarlardan elverişli ve stratejik yarımada olğanı kimse içün sır degildir. Keçmişke bir nazar atacaq olsaq, Qırım yarımadası sakin olmağan yani yerli ehali pek çoq cenkleşip kelgendir. Ahır-soñu, bu topraq qırım halqınıñ varlığı, baylığı, Vatanı olup qaldı. Qırım yarımadasında qırım halqı millet olaraq şekillenerek öz ulu devletini qurğandır. Asırlar devamında her bir sahada inkişaf etip kelgen Qırım Hanlığı, öz devrinde Şarqiy Avropanıñ en küçlü devletlerinden biri olup kelgendir. Merkeziy, Şarqiy Avropa ve Ğarbiy Asiyada da siyasiy ve harbiy sahalarda Qırım Hanlığı asılar devamında liderlik yapqandır. Amma ne yazıq ki, 340 yıl devamında "at oynatqandan" soñ, Qırım Hanlığıniñ hükümdarlığı soñuna ere. Neticede Vatanımız bir çoq qara yıllar devamına qomşu imperialist Rusiye Çarlığınıñ qanlı pancası tübünde iñlemege mecbur qala. Bu devirni "Qara devir" dep adlandırmaq mumkün, çünki bu devir devamında halqımız genosid, etnosid ve sürgünlükke oğratılğandır. Allağa binlerce kere şükür etmek kerekmiz ki, milletimiz duşmanlarımız istegeni kibi yer yüzünden yoq olmadı, aksine "Meclis, Millet, Vatan ve Allah" dep ayaqqa turıp milliy qurtulış yoluna çıqtı!
@@ -23,3 +24,45 @@ Milliy-qurtulış areketi çeşit devirlerde öz şekilini deňiştirgen olsa da
 	
 
 Bizim Qırım
+
+Bizim istegimiz – Qırım halqınıñ añını arttırmaq ve imanğa çekmek, Qırım gençlerini milliy kureş ve halq menfaatı içün çalıştırtmaq!
+
+BİZİM QIRIM:
+
+BQ teşkilâtı - milleti ve Vatanını sevgen, keçmişini bilgen, halqınıñ kelecegini musbet şekilde qurulmasını maqsat edingenlerni bir arağa toplağan teşkilâttır. Milletimizniñ şimdiki vaziyetini ve onıñ bu alğa tüşürgen sebeplerni añlağan, bunıñ çezme yollarını bilgen ve milliy menfaatqa esaslanğan taqım, artıq öz işine başlağandır. Tek maqsadı - milliy qurtulış - olğanını bilgen BQ azaları, öz maqsadına adım-adım yaqınlaşmaqtadır. BQ azaları - vatanperverlik duyğularını, İslâm dini ve Qırım’nıñ qıymetlerini bilgen ve progresiv ğayelerni taşığan gençlerdir.
+
+BQ’nıñ maqsadı – milletimizni öz Vatanında ğayrıdan er taraflama tiklemek ve inkişaf ettirip ögümizge qoyulğan milliy maqsatlarımızğa iriştirmek, milliy menfaatlarımıznı qorçalamaqtır.
+
+BQ’nıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni qazanmaq, Qırım gençligini añlı ve imanlı bir gençler olaraq terbiyelemek, halqara qırımlılar milliy kureşini yüksek seviyede kotermek, Qırım tilini ğayrıdan tiklemek, halqımıznıñ yaşayışını İslâm dini esasında qurmaq, Qırım yarımadasında muhabetlikni pekitmek, milletlerara munasebetlerini sağlamlaştırmaq ve iqtisadiy inkişafnı keliştirmekten ibarettir.
+
+
+BQ’niñ FAALİYET SAALARI:
+
+MİLLİY KUREŞ SAASINDA:
+Qurultay saylâvlarında iştirak etüv;
+Gençlerniñ milliy kureş yolbaşçılarınen daimiy dialogda bulunuvı;
+Yaş nesilni milliy areketke celp etüv; 
+Aq-uquqlarımıznıñ tiklenmesi maqsadınen halqara aq-uquq qorçalayıcı teşkilâtlarnen işbirlikte bulunuv kibi faaliyetlerden ibaret olacaqtır.
+
+DİNİY SAADA:
+Yaş nesilge İslâm dinini eñ doğru şekilde tanıtuv;
+Sovet devrinde yıqılğan camilerni ğayrıdan tiklev;
+Semetdeşlerimiz yaşağan qasabalarda yañı camilerni quruv;
+Qırımdaki dinlerara munasebetlerniñ sağlam olmasını pekitüvden ibaret olacaqtır.
+
+ANA TİLİMİZNİ OGRENÜV SAASINDA:
+Yaş nesilimizge qırım tiliniñ muimligi ve perspektivasını añlatuv;
+Qırım tiliniñ ogrenilmesi içün şarait yaratuv;
+Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
+
+TARİH SAASINDA:
+Keçmiş ve tarihimizni tanıtuv;
+Qırım, Ukrayina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihiniñ tanıtıluvı;
+Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
+
+Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
+
+Biz ant ettik, ant etkenler izlerinden ketmege, 
+Millet aqqı içün canımıznı feda etmege...
+
+Site adresimiz: www.bizimqirim.org
