*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -15,7 +15,7 @@ BQ maqsatları
 
 
 
-“Qırım gençligini bir iman etrafına toplamaq ve tüşüncelerini millet ve memleketke doğrultmaq!”
+'''“Qırım gençligini bir iman etrafına toplamaq ve tüşüncelerini millet ve memleketke doğrultmaq!”'''
 
 Milliy-qurtulış areketi çeşit devirlerde öz şekilini deňiştirgen olsa da, munderice ve maqsadına er daim sadıq qalğandır. Qırım halqınıň kureş meydanını ot basmaycaq, o devam etecek. Yarınki künge eminliknen adım atmaq içün, keçmişke, tünevinki künümizge nazar taşlamaq, olardan zarur hulâsalarnı çıqarmaq kerekmiz.
 
