*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -1,5 +1,5 @@
-"BİZİM QIRIM" adlı Halqara Cemaat Teşkilâtı
-
+'''"BİZİM QIRIM" adlı Halqara Cemaat Teşkilâtı
+'''
 Qırım - dünyanıñ en dülber, zengin köşelerinden biri olmaqnen bir arada, oñayıtlı ve geostratejik baqıştan mühim olğan bir regiondır. Qırım - iqtisadiy, harbiy ve siyasiy noqtai-nazarlardan elverişli ve stratejik yarımada olğanı kimse içün sır degildir. Keçmişke bir nazar atacaq olsaq, Qırım yarımadası sakin olmağan yani yerli ehali pek çoq cenkleşip kelgendir. Ahır-soñu, bu topraq qırım halqınıñ varlığı, baylığı, Vatanı olup qaldı. Qırım yarımadasında qırım halqı millet olaraq şekillenerek öz ulu devletini qurğandır. Asırlar devamında her bir sahada inkişaf etip kelgen Qırım Hanlığı, öz devrinde Şarqiy Avropanıñ en küçlü devletlerinden biri olup kelgendir. Merkeziy, Şarqiy Avropa ve Ğarbiy Asiyada da siyasiy ve harbiy sahalarda Qırım Hanlığı asılar devamında liderlik yapqandır. Amma ne yazıq ki, 340 yıl devamında "at oynatqandan" soñ, Qırım Hanlığıniñ hükümdarlığı soñuna ere. Neticede Vatanımız bir çoq qara yıllar devamına qomşu imperialist Rusiye Çarlığınıñ qanlı pancası tübünde iñlemege mecbur qala. Bu devirni "Qara devir" dep adlandırmaq mumkün, çünki bu devir devamında halqımız genosid, etnosid ve sürgünlükke oğratılğandır. Allağa binlerce kere şükür etmek kerekmiz ki, milletimiz duşmanlarımız istegeni kibi yer yüzünden yoq olmadı, aksine "Meclis, Millet, Vatan ve Allah" dep ayaqqa turıp milliy qurtulış yoluna çıqtı!
 Biz, halqımıznıñ milliy hareketinde, milliy qurtulış yoluna can ve hayatlarını feda etken ecdatlarımıznı, hiç bir vaqıt unutmayıp, hürmet ve sayğı ile añıp turamız. Biz halqımıznıñ vaziyetini añlap, milliy qurtulış hareketine ve milletimiznıñ maqsadına yetme yolunda öz qatqımıznı qoşmağa istep, milliy hareketimizge qoşılıp siyasiy sahasında çalışmağa istegimiz var. 
 "Bizim Qırım" adlı Halqara cemaat teşkilâtı halqımıznıñ milliy anane ve adetlerine esaslanaraq, elinde olğan butün imkânlardan faydalanıp, artıq tarihte qalğan ululığını tekrar tiklemege hareket etmekni, onıñ birligi, baht ve seadeti içün küreşmekni maqsat edingendir. 
@@ -11,7 +11,7 @@ Biz ant ettik, ant etkenlerniñ izlerinden ketmege,
 Milletimiz haqqı içün canımıznı feda etmege...
 
 
-BQ maqsatları 
+'''BQ maqsatları'''''İtalik (kursiv) yazılış'' 
 
 
 
@@ -23,7 +23,7 @@ Milliy-qurtulış areketi çeşit devirlerde öz şekilini deňiştirgen olsa da
 
 Bizim Qırım
 
-Bizim istegimiz – Qırım halqınıñ añını arttırmaq ve imanğa çekmek, Qırım gençlerini milliy kureş ve halq menfaatı içün çalıştırtmaq!
+'''Bizim istegimiz – Qırım halqınıñ añını arttırmaq ve imanğa çekmek, Qırım gençlerini milliy kureş ve halq menfaatı içün çalıştırtmaq!'''
 
 BİZİM QIRIM:
 
@@ -34,34 +34,36 @@ BQ’nıñ maqsadı – milletimizni öz Vatanında ğayrıdan er taraflama tikl
 BQ’nıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni qazanmaq, Qırım gençligini añlı ve imanlı bir gençler olaraq terbiyelemek, halqara qırımlılar milliy kureşini yüksek seviyede kotermek, Qırım tilini ğayrıdan tiklemek, halqımıznıñ yaşayışını İslâm dini esasında qurmaq, Qırım yarımadasında muhabetlikni pekitmek, milletlerara munasebetlerini sağlamlaştırmaq ve iqtisadiy inkişafnı keliştirmekten ibarettir.
 
 
-BQ’niñ FAALİYET SAALARI:
+'''BQ’niñ FAALİYET SAALARI:'''
 
-MİLLİY KUREŞ SAASINDA:
+''MİLLİY KUREŞ SAASINDA:'''''Qalın yazılış'''
 Qurultay saylâvlarında iştirak etüv;
 Gençlerniñ milliy kureş yolbaşçılarınen daimiy dialogda bulunuvı;
 Yaş nesilni milliy areketke celp etüv; 
 Aq-uquqlarımıznıñ tiklenmesi maqsadınen halqara aq-uquq qorçalayıcı teşkilâtlarnen işbirlikte bulunuv kibi faaliyetlerden ibaret olacaqtır.
 
-DİNİY SAADA:
+''DİNİY SAADA:'''''Qalın yazılış'''
 Yaş nesilge İslâm dinini eñ doğru şekilde tanıtuv;
 Sovet devrinde yıqılğan camilerni ğayrıdan tiklev;
 Semetdeşlerimiz yaşağan qasabalarda yañı camilerni quruv;
 Qırımdaki dinlerara munasebetlerniñ sağlam olmasını pekitüvden ibaret olacaqtır.
 
-ANA TİLİMİZNİ OGRENÜV SAASINDA:
+''ANA TİLİMİZNİ OGRENÜV SAASINDA:'''''Qalın yazılış'''
 Yaş nesilimizge qırım tiliniñ muimligi ve perspektivasını añlatuv;
 Qırım tiliniñ ogrenilmesi içün şarait yaratuv;
 Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
 
-TARİH SAASINDA:
+''TARİH SAASINDA:'''''Qalın yazılış'''
 Keçmiş ve tarihimizni tanıtuv;
 Qırım, Ukrayina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihiniñ tanıtıluvı;
 Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
 
-Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
+'''Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
+'''
 
-Biz ant ettik, ant etkenler izlerinden ketmege, 
-Millet aqqı içün canımıznı feda etmege...
+== Biz ant ettik, ant etkenler izlerinden ketmege, 
+Millet aqqı içün canımıznı feda etmege... ==
+
 
 
 
