*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -11,7 +11,7 @@ Biz ant ettik, ant etkenlerniñ izlerinden ketmege,
 Milletimiz haqqı içün canımıznı feda etmege...
 
 
-'''BQ maqsatları'''''İtalik (kursiv) yazılış'' 
+'''BQ maqsatları'''
 
 
 
@@ -36,24 +36,24 @@ BQ’nıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni q
 
 '''BQ’niñ FAALİYET SAALARI:'''
 
-''MİLLİY KUREŞ SAASINDA:'''''Qalın yazılış'''
+''MİLLİY KUREŞ SAASINDA:''
 Qurultay saylâvlarında iştirak etüv;
 Gençlerniñ milliy kureş yolbaşçılarınen daimiy dialogda bulunuvı;
 Yaş nesilni milliy areketke celp etüv; 
 Aq-uquqlarımıznıñ tiklenmesi maqsadınen halqara aq-uquq qorçalayıcı teşkilâtlarnen işbirlikte bulunuv kibi faaliyetlerden ibaret olacaqtır.
 
-''DİNİY SAADA:'''''Qalın yazılış'''
+''DİNİY SAADA:''
 Yaş nesilge İslâm dinini eñ doğru şekilde tanıtuv;
 Sovet devrinde yıqılğan camilerni ğayrıdan tiklev;
 Semetdeşlerimiz yaşağan qasabalarda yañı camilerni quruv;
 Qırımdaki dinlerara munasebetlerniñ sağlam olmasını pekitüvden ibaret olacaqtır.
 
-''ANA TİLİMİZNİ OGRENÜV SAASINDA:'''''Qalın yazılış'''
+''ANA TİLİMİZNİ OGRENÜV SAASINDA:''
 Yaş nesilimizge qırım tiliniñ muimligi ve perspektivasını añlatuv;
 Qırım tiliniñ ogrenilmesi içün şarait yaratuv;
 Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
 
-''TARİH SAASINDA:'''''Qalın yazılış'''
+''TARİH SAASINDA:'''
 Keçmiş ve tarihimizni tanıtuv;
 Qırım, Ukrayina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihiniñ tanıtıluvı;
 Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
@@ -61,8 +61,8 @@ Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yarat
 '''Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
 '''
 
-== Biz ant ettik, ant etkenler izlerinden ketmege, 
-Millet aqqı içün canımıznı feda etmege... ==
+                                      '''  Biz ant ettik, ant etkenler izlerinden ketmege, 
+                                          Millet aqqı içün canımıznı feda etmege...''' 
 
 
 
