--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -63,9 +63,9 @@ Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yarat
 '''Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
 '''
 
- '''  Biz ant ettik, ant etkenler izlerinden ketmege, 
-      Millet aqqı içün canımıznı feda etmege...'''
-
+                             ''' Biz ant ettik, ant etkenler izlerinden ketmege, 
+                              Millet aqqı içün canımıznı feda etmege...
+'''
 
 
 
