*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -55,7 +55,7 @@ Yaş nesilimizge qırım tiliniñ muimligi ve perspektivasını añlatuv;
 Qırım tiliniñ ogrenilmesi içün şarait yaratuv;
 Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
 
-''TARİH SAASINDA:'''
+''TARİH SAASINDA:''
 Keçmiş ve tarihimizni tanıtuv;
 Qırım, Ukrayina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihiniñ tanıtıluvı;
 Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
@@ -64,8 +64,9 @@ Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yarat
 '''
 
                        
-'''Biz ant ettik, ant etkenler izlerinden ketmege, 
-Millet aqqı içün canımıznı feda etmege...'''
+                           '''Biz ant ettik, ant etkenler izlerinden ketmege, 
+                              Millet aqqı içün canımıznı feda etmege...'''
+
 	
 
 ----
