*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -71,4 +71,4 @@ Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yarat
 
 ----
 
-'''BQ site adresi:''' [http://www.bizimqirim.org saifeniñ serlevası]
+'''BQ site adresi:''' [http://www.bizimqirim.org bizimqirim.org]
