*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -1,4 +1,4 @@
-'''"BİZİM QIRIM" adlı Halqara Cemaat Teşkilâtı
+'''"BİZİM QIRIM" adlı Halqara Cemaat Teşkilâtı                     [[Resim:Resim.jpgResim.jpg]]
 '''
 
 
