*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -1,74 +1,53 @@
-'''"BİZİM QIRIM" adlı Halqara Cemaat Teşkilâtı                     [[Resim:Resim.jpgResim.jpg]]
-'''
+'''Bizim Qırım''' - [[Qırım]]da oturğan bir halqara cemaat teşkilâtıdır.
+
+== Teşkilât aqqında qısqa malümat ==
+Bizim Qırımnıñ azaları öz halqınıñ milliy areketinde, milliy qurtulış yoluna can ve ayatlarını feda etken ecdatlarını, iç bir vaqıt unutmayıp, ürmet ve sayğı ile añıp turalar. Halqınıñ vaziyetini añlap, milliy qurtulış areketine ve milletiniñ maqsadına yetme yolunda öz isseni qoşmağa istep, milliy areketine qoşulıp siyasiy saasında çalışmağa istegi bar. 
+
+"Bizim Qırım" adlı halqara cemaat teşkilâtı [[Qırımlar|qırım halqınıñ]] milliy anane ve adetlerine esaslanaraq, elinde olğan bütün imkânlardan faydalanıp, artıq tarihta qalğan ululığını tekrar tiklemege areket etmekni, onıñ birligi, baht ve seadeti içün küreşmekni maqsat edingendir. 
+
+[[Ukraina]]ğa bağlı olğan Ulu Vatanımızda, milliy devletçiligimizni tiklemekni maqsat dep bilemiz. Teşkilâtnıñ diger ve eñ müim maqsatlarından biri de, kün sayın unutılmaqta olıp, ayaqastı etileyatqan ve ulu şairimiz [[Eşref Şemi-zade]] aytqanı kibi “türkiy tiller gülzarınıñ, eñ çiçekli fidanı” olğan ana tilimizni canlandıraraq, halqımız tarafından oña nisbeten añlı sayğı ve sevgini arttırmaqtan ibaret olacaqtır. Teşkiâtımız öz faaliyetine başlar eken, Allah ve namusımız, ecdatlarımız ve kelecekteki nesillerimiz ögündeki mesüliyeti aqqında unutmayaraq, milletimizniñ yaşayışınen bağlı bütün saalarnıñ inkişaf etmesi içün daa ziyade şarait yaratmağa tırışıp, milliy menfaatlarımıznı qorçalamağa areket etecektir.
+
+Biz, Qırım genç ve qızları olaraq öz küç ve qudretimizni halqımız elinden zorbalıqnen çekilip alınğan aq-uquqlarnıñ qaytarılıp berilmesi ve oña nisbeten yapılğan tarihiy adaletsizlikniñ tiklenmesi oğruna feda etmege niyetlendik. Bunıñ içün, halqımıznıñ milliy ve diniy añını arttırma, ana tilini, medeniyetini ve adetlerini sevdirme ve teşviqat etme, halqımızğa müsbet imic qazandırma oğrunda ep gumanizm, barışıq ve tolerantlılıq pritsiplerine esaslanacaqtırmız. Maqsadımızğa erişmek içün ep barışıq yolları ve usulları ile areket etilecektir. 
+
+Aq-uquq qorçalav işinde zemaneviy usullarını qullanmaq içün, teşkilâmız “halqara” statusnı ala. Bilgenimiz kibi, halqımıznıñ büyük bir diasporası bar ve onı milletimizniñ faydası içün halqara seviyede de qullanmaqnı doğru olur edi dep esaplaymız. Dünyada yaşağan qırımlılarnıñ imkânlarını Vatanlarına doğurtmağa tırışacaqmız.
+"Bizim Qırım" adlı halqara cemaat teşkilâtı bütün qırımtatar milleti kibi, öz kelecegine işanıp, [[Qırımtatar Milliy Qurultayı]] ve [[Qırımtatar Milliy  Meclisi|Meclisini]] - halqımıznıñ tek yuqarı milliy organı olaraq tanıy. Biz öz faaliyetimizde Milliy Qurultay qanunlarına, Milliy Meclis emirlerine esaslanacaqmız.
+
+== Maqsatlar ==
+“Qırım gençligini bir iman etrafına toplamaq ve tüşüncelerini millet ve memleketke doğrultmaq!”
+
+Milliy-qurtulış areketi çeşit devirlerde öz şekilini deňiştirgen olsa da, münderice ve maqsadına er daim sadıq qalğandır. Qırım halqınıň küreş meydanını ot basmaycaq, o devam etecek. Yarınki künge eminliknen adım atmaq içün, keçmişke, tünevinki künümizge nazar taşlamaq, olardan zarur hulâsalarnı çıqarmaq kerekmiz.
+
+Bizim istegimiz – Qırım halqınıñ añını arttırmaq ve imanğa çekmek, Qırım gençlerini milliy küreş ve halq menfaatı içün çalıştırtmaq!
+
+BQ teşkilâtı - milleti ve Vatanını sevgen, keçmişini bilgen, halqınıñ kelecegini müsbet şekilde qurulmasını maqsat edingenlerni bir arağa toplağan teşkilâttır. Milletimizniñ şimdiki vaziyetini ve onıñ bu alğa tüşürgen sebeplerni añlağan, bunıñ çezme yollarını bilgen ve milliy menfaatqa esaslanğan taqım, artıq öz işine başlağandır. Tek maqsadı - milliy qurtulış - olğanını bilgen BQ azaları, öz maqsadına adım-adım yaqınlaşmaqtadır. BQ azaları - vatanperverlik duyğularını, [[İslâm]] dini ve Qırımnıñ qıymetlerini bilgen ve progressiv ğayelerni taşığan gençlerdir.
+
+BQnıñ maqsadı – milletimizni öz Vatanında ğayrıdan er taraflama tiklemek ve inkişaf ettirip ögümizge qoyulğan milliy maqsatlarımızğa iriştirmek, milliy menfaatlarımıznı qorçalamaqtır.
+
+BQnıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni qazanmaq, Qırım gençligini añlı ve imanlı bir gençler olaraq terbiyelemek, halqara qırımlılar milliy küreşini yüksek seviyede kötermek, [[Qırım tili]]ni ğayrıdan tiklemek, halqımıznıñ yaşayışını İslâm dini esasında qurmaq, Qırım yarımadasında muabbetlikni pekitmek, milletlerara munasebetlerini sağlamlaştırmaq ve iqtisadiy inkişafnı keliştirmekten ibarettir.
 
 
-Qırım - dünyanıñ en dülber, zengin köşelerinden biri olmaqnen bir arada, oñayıtlı ve geostratejik baqıştan mühim olğan bir regiondır. Qırım - iqtisadiy, harbiy ve siyasiy noqtai-nazarlardan elverişli ve stratejik yarımada olğanı kimse içün sır degildir. Keçmişke bir nazar atacaq olsaq, Qırım yarımadası sakin olmağan yani yerli ehali pek çoq cenkleşip kelgendir. Ahır-soñu, bu topraq qırım halqınıñ varlığı, baylığı, Vatanı olup qaldı. Qırım yarımadasında qırım halqı millet olaraq şekillenerek öz ulu devletini qurğandır. Asırlar devamında her bir sahada inkişaf etip kelgen Qırım Hanlığı, öz devrinde Şarqiy Avropanıñ en küçlü devletlerinden biri olup kelgendir. Merkeziy, Şarqiy Avropa ve Ğarbiy Asiyada da siyasiy ve harbiy sahalarda Qırım Hanlığı asılar devamında liderlik yapqandır. Amma ne yazıq ki, 340 yıl devamında "at oynatqandan" soñ, Qırım Hanlığıniñ hükümdarlığı soñuna ere. Neticede Vatanımız bir çoq qara yıllar devamına qomşu imperialist Rusiye Çarlığınıñ qanlı pancası tübünde iñlemege mecbur qala. Bu devirni "Qara devir" dep adlandırmaq mumkün, çünki bu devir devamında halqımız genosid, etnosid ve sürgünlükke oğratılğandır. Allağa binlerce kere şükür etmek kerekmiz ki, milletimiz duşmanlarımız istegeni kibi yer yüzünden yoq olmadı, aksine "Meclis, Millet, Vatan ve Allah" dep ayaqqa turıp milliy qurtulış yoluna çıqtı!
-Biz, halqımıznıñ milliy hareketinde, milliy qurtulış yoluna can ve hayatlarını feda etken ecdatlarımıznı, hiç bir vaqıt unutmayıp, hürmet ve sayğı ile añıp turamız. Biz halqımıznıñ vaziyetini añlap, milliy qurtulış hareketine ve milletimiznıñ maqsadına yetme yolunda öz qatqımıznı qoşmağa istep, milliy hareketimizge qoşılıp siyasiy sahasında çalışmağa istegimiz var. 
-"Bizim Qırım" adlı Halqara cemaat teşkilâtı halqımıznıñ milliy anane ve adetlerine esaslanaraq, elinde olğan butün imkânlardan faydalanıp, artıq tarihte qalğan ululığını tekrar tiklemege hareket etmekni, onıñ birligi, baht ve seadeti içün küreşmekni maqsat edingendir. 
-Ukraynağa bağlı olğan Ulu Vatanımızda, milliy devletçiligimizni tiklemekni maqsat dep bilemiz. Teşkilâtnıñ diger ve eñ muhim maqsatlarından biri de, kün sayın unutılmaqta olıp, ayaqastı etileyatqan ve ulu şairimiz Eşref Şemi-Zade aytqanı kibi “türkiy tiller gülzarınıñ, eñ çeçekli fidanı” olğan ana tilimizni canlandıraraq, halqımız tarafından oña nisbeten añlı sayğı ve sevgini arttırmaqtan ibaret olacaqtır. Teşkiâtımız öz faaliyetine başlar eken, Allah ve namusımız, ecdatlarımız ve kelecekteki nesillerimiz ogündeki mesuliyeti haqqında unutmayaraq, milletimizniñ yaşayışınen bağlı butün sahalarnıñ inkişaf etmesi içün daha ziyade şarait yaratmağa tırışıp, milliy menfaatlarımıznı qorçalamağa hareket etecektir.
-Biz, Qırım genç ve qızları olaraq öz küç ve qudretimizni halqımız elinden zorbalıqnen çekilip alınğan haq-huquqlarnıñ qaytarılıp berilmesi ve oña nisbeten yapılğan tarihiy adaletsizlikniñ tiklenmesi oğruna feda etmege niyetlendik. Bunıñ içün, halqımıznıñ milliy ve diniy añını arttırma, ana tilini, medeniyetini ve adetlerini sevdirme ve propaganda etme, halqımızğa musbet imidj qazandırma oğrunda hep gumanizm, barışıq ve tolerantlıq prisiplerine esaslanacaqtırmız. Maqsadımızğa erişmek içün hep barışıq yolları ve usulları ile hareket etilecektir. 
-Haq-huquq qorçalav işinde zemaneviy usullarını qullanmaq içün, teşkilâmız “halqara” statusnı ala. Bilgenimiz kibi, halqımıznıñ büyük bir diasporası bar ve onı milletimizniñ faydası içün halqara seviyede de qullanmaqnı doğru olur edi dep hesaplaymız. Dünyada yaşağan qırımlılarnıñ imkânlarını Vatanlarına doğurtmağa tırışacaqmız.
-"Bizim Qırım" adlı Halqara cemaat teşkilâtı bütün qırımtatar milleti kibi, öz kelecegine işanıp, Qırımtatar Milliy Qurultay ve Meclisini - halqımıznıñ tek yuqarı milliy organı olaraq tanıy. Biz öz faaliyetimizde Milliy Qurultay qanunlarına, Milliy Meclis emirlerine esaslanacaqmız. 
-Biz ant ettik, ant etkenlerniñ izlerinden ketmege, 
-Milletimiz haqqı içün canımıznı feda etmege...
+== Faalıyet saaları ==
+=== Milliy küreş saasında ===
+* Qurultay saylavlarında iştirak etüv;
+* Gençlerniñ milliy küreş yolbaşçılarınen daimiy dialogda bulunuvı;
+* Yaş nesilni milliy areketke celp etüv; 
+* Aq-uquqlarımıznıñ tiklenmesi maqsadınen halqara aq-uquq qorçalayıcı teşkilâtlarnen işbirlikte bulunuv kibi faaliyetlerden ibaret olacaqtır.
 
+=== Diniy saada ===
+* Yaş nesilge İslâm dinini eñ doğru şekilde tanıtuv;
+* Sovet devrinde yıqılğan camilerni ğayrıdan tiklev;
+* Semetdeşlerimiz yaşağan qasabalarda yañı camilerni quruv;
+* Qırımdaki dinlerara munasebetlerniñ sağlam olmasını pekitüvden ibaret olacaqtır.
 
-'''BQ maqsatları'''
+=== Ana tili ögrenüv saasında ===
+* Yaş nesilimizge qırım tiliniñ müimligi ve perspektivasını añlatuv;
+* Qırım tiliniñ ögrenilmesi içün şarait yaratuv;
+* Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
 
+=== Tarih saasında ===
+* Keçmiş ve tarihımıznı tanıtuv;
+* Qırım, Ukraina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihınıñ tanıtıluvı;
+* Milliy tarihımıznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
 
-
-'''“Qırım gençligini bir iman etrafına toplamaq ve tüşüncelerini millet ve memleketke doğrultmaq!”'''
-
-Milliy-qurtulış areketi çeşit devirlerde öz şekilini deňiştirgen olsa da, munderice ve maqsadına er daim sadıq qalğandır. Qırım halqınıň kureş meydanını ot basmaycaq, o devam etecek. Yarınki künge eminliknen adım atmaq içün, keçmişke, tünevinki künümizge nazar taşlamaq, olardan zarur hulâsalarnı çıqarmaq kerekmiz.
-
-	
-
-Bizim Qırım
-
-'''Bizim istegimiz – Qırım halqınıñ añını arttırmaq ve imanğa çekmek, Qırım gençlerini milliy kureş ve halq menfaatı içün çalıştırtmaq!'''
-
-BİZİM QIRIM:
-
-BQ teşkilâtı - milleti ve Vatanını sevgen, keçmişini bilgen, halqınıñ kelecegini musbet şekilde qurulmasını maqsat edingenlerni bir arağa toplağan teşkilâttır. Milletimizniñ şimdiki vaziyetini ve onıñ bu alğa tüşürgen sebeplerni añlağan, bunıñ çezme yollarını bilgen ve milliy menfaatqa esaslanğan taqım, artıq öz işine başlağandır. Tek maqsadı - milliy qurtulış - olğanını bilgen BQ azaları, öz maqsadına adım-adım yaqınlaşmaqtadır. BQ azaları - vatanperverlik duyğularını, İslâm dini ve Qırım’nıñ qıymetlerini bilgen ve progresiv ğayelerni taşığan gençlerdir.
-
-BQ’nıñ maqsadı – milletimizni öz Vatanında ğayrıdan er taraflama tiklemek ve inkişaf ettirip ögümizge qoyulğan milliy maqsatlarımızğa iriştirmek, milliy menfaatlarımıznı qorçalamaqtır.
-
-BQ’nıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni qazanmaq, Qırım gençligini añlı ve imanlı bir gençler olaraq terbiyelemek, halqara qırımlılar milliy kureşini yüksek seviyede kotermek, Qırım tilini ğayrıdan tiklemek, halqımıznıñ yaşayışını İslâm dini esasında qurmaq, Qırım yarımadasında muhabetlikni pekitmek, milletlerara munasebetlerini sağlamlaştırmaq ve iqtisadiy inkişafnı keliştirmekten ibarettir.
-
-
-'''BQ’niñ FAALİYET SAALARI:'''
-
-''MİLLİY KUREŞ SAASINDA:''
-Qurultay saylâvlarında iştirak etüv;
-Gençlerniñ milliy kureş yolbaşçılarınen daimiy dialogda bulunuvı;
-Yaş nesilni milliy areketke celp etüv; 
-Aq-uquqlarımıznıñ tiklenmesi maqsadınen halqara aq-uquq qorçalayıcı teşkilâtlarnen işbirlikte bulunuv kibi faaliyetlerden ibaret olacaqtır.
-
-''DİNİY SAADA:''
-Yaş nesilge İslâm dinini eñ doğru şekilde tanıtuv;
-Sovet devrinde yıqılğan camilerni ğayrıdan tiklev;
-Semetdeşlerimiz yaşağan qasabalarda yañı camilerni quruv;
-Qırımdaki dinlerara munasebetlerniñ sağlam olmasını pekitüvden ibaret olacaqtır.
-
-''ANA TİLİMİZNİ OGRENÜV SAASINDA:''
-Yaş nesilimizge qırım tiliniñ muimligi ve perspektivasını añlatuv;
-Qırım tiliniñ ogrenilmesi içün şarait yaratuv;
-Halqımıznıñ içtimaiy ayatını qırım tili esasında quruv kibi maqsatlardan ibaret olacaqtır. 
-
-''TARİH SAASINDA:''
-Keçmiş ve tarihimizni tanıtuv;
-Qırım, Ukrayina ve halqara cemaatçılığına Qırım ve halqımıznıñ kerçek tarihiniñ tanıtıluvı;
-Milliy tarihimiznen bağlı araştıruvlarnıñ yapılması içün şarait yaratuvdan ibaret olacaqtır.
-
-'''Biznen beraber olmaq – kelecegimizni doğru qurmaq demektir.
-'''
-
-                       
-                           '''Biz ant ettik, ant etkenler izlerinden ketmege, 
-                              Millet aqqı içün canımıznı feda etmege...'''
-
-	
-
-----
-
-'''BQ site adresi:''' [http://www.bizimqirim.org bizimqirim.org]
+== Bağlantılar ==
+[http://www.bizimqirim.org Bizim Qırımnıñ resmiy saytı]
