*Empty MediaWiki Message*

--- a/Bizim_Qırım.mw
+++ b/Bizim_Qırım.mw
@@ -26,7 +26,7 @@ BQnıñ maqsadı – milletimizni öz Vatanında ğayrıdan er taraflama tikleme
 BQnıñ vazifeleri - milliy siyasetimizde küçlü taqım olaraq akimiyetni qazanmaq, Qırım gençligini añlı ve imanlı bir gençler olaraq terbiyelemek, halqara qırımlılar milliy küreşini yüksek seviyede kötermek, [[Qırım tili]]ni ğayrıdan tiklemek, halqımıznıñ yaşayışını İslâm dini esasında qurmaq, Qırım yarımadasında muabbetlikni pekitmek, milletlerara munasebetlerini sağlamlaştırmaq ve iqtisadiy inkişafnı keliştirmekten ibarettir.
 
 
-== Faalıyet saaları ==
+== Faaliyet saaları ==
 === Milliy küreş saasında ===
 * Qurultay saylavlarında iştirak etüv;
 * Gençlerniñ milliy küreş yolbaşçılarınen daimiy dialogda bulunuvı;
