--- a/Yozgat_(il).mw
+++ b/Yozgat_(il).mw
@@ -2,7 +2,7 @@
 '''Yozgat''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 == Bağlantılar ==
-* http://www.yozgat.gen.tr
+* [http://www.yozgat.gen.tr Yozgat]
 
 
 {{Türkiyeniñ illeri}}
