*Empty MediaWiki Message*

--- a/Albat.mw
+++ b/Albat.mw
@@ -105,4 +105,5 @@ Aqsız qurbannıñ biri de okkupatsiya vaqtında özüni bir derece tutqan, birl
 [[Kategoriya:Qırımdaki şeerler]]
 
 [[eo:Kujbiŝevo (Baĥĉisaraja distrikto)]]
+[[ru:Куйбышево (Бахчисарайский район)]]
 [[uk:Куйбишеве (Бахчисарайський район)]]
