*Empty MediaWiki Message*

--- a/İli_Türk_tili.mw
+++ b/İli_Türk_tili.mw
@@ -28,7 +28,7 @@
 |+İli Türkiy tilinde Qıpçaq ve Qarluq hususiyetler
 ! &nbsp; !![[Qazah tili|Qazahça]] (Qıpçaq)!!Ili Turki!![[Özbek tili|Özbekçe]] (Qarluq)!!Qırımtatarca
 |-
-!keñ sozuqlardan soñ Ğ > W
+!Keñ sozuqlardan soñ Ğ > W
 |bgcolor="silver"|{{IPA|taw}}
 |bgcolor="silver"|{{IPA|taw}}
 |{{IPA|tɒɣ}}
@@ -40,7 +40,7 @@
 |{{IPA|tʉjæ+niŋ}} / {{IPA|et+niŋ}}
 |deveniñ / etniñ
 |-
-!tar sozuqlardan soñ Ğ > W > Ø
+!Tar sozuqlardan soñ Ğ > W > Ø
 |{{IPA|sarɨ}}
 |bgcolor="silver"|{{IPA|sarɨq}}
 |bgcolor="silver"|{{IPA|sarɨq}}
