*Empty MediaWiki Message*

--- a/Mustafa_Cemilev.mw
+++ b/Mustafa_Cemilev.mw
@@ -1,7 +1,7 @@
 [[Resim:Mustafa Abdülcemil Kırımoğlu.jpg|right|thumb|200px|Mustafa Cemilev]]
 '''Mustafa Abdülcemil Cemilev (Qırımoğlu)''' ([[1943]] d.) — [[qırımtatar milliy areketi]]niñ belli erbabı, [[Qırımtatar Milliy Meclisi]]niñ reisi, evelde [[ŞSCB|sovet]] [[aq qоruyıcı]], [[dissident]].
 
-Mustafa Cemilev [[1943]] senesi [[noyabr 13]]-de [[Qırım MŞSC]] [[Sudaq şeer şurası|Sudaq regionınıñ]] [[Ay Serez]] köyünde doğdı. 1944] senesi [[mayıs 18]]-de cümle [[Qırımtatarlar|qırımtatar halqınen]] beraber Qırımdan [[Özbekistan|Özbek ŞSCne]] [[Sürgün|sürgün etildi]]. [[Taşkent]]teki aviatsion zavodta tornacı olıp çalıştı.
+Mustafa Cemilev [[1943]] senesi [[noyabr 13]]-de Qırım çölündeki [[Bozköy]] köyünde doğdı, lâkin qorantası [[Sudaq şeer şurası|Sudaq regionınıñ]] [[Ay Serez]] köyü tamırlı. 1944] senesi [[mayıs 18]]-de cümle [[Qırımtatarlar|qırımtatar halqınen]] beraber Qırımdan [[Özbekistan|Özbek ŞSCne]] [[Sürgün|sürgün etildi]]. [[Taşkent]]teki aviatsion zavodta tornacı olıp çalıştı.
 
 == Aq qоruyıcılıq ==
 [[1961]] senesi Mustafa Cemilev qırımtatar dostlarınen birlikte Qırımtatar gençleri birligini meydanğa ketirdiler.
