*Empty MediaWiki Message*

--- a/Lenara_Osmanova.mw
+++ b/Lenara_Osmanova.mw
@@ -1,15 +1,14 @@
-'''Lenara Osmanova''' (Ленара Османова), [[Qırım Muhtar Cumhuriyetinde]] [[nam qazanğan]] sanatçı, yırcı, film oyuncusu, sunucu ve dansçı.
+'''Lenara Osmanova''' (Ленара Османова) - [[Qırım Muhtar Cumhuriyetinde]] [[nam qazanğan]] sanatçı, yırcı, film oyuncusu, sunucı ve dansçı.
 
-[[1986]] senesi [[Mayıs 7|mayısnıñ 7]] künü Uzmekistannıñ [[Taşkent]] şeerinde doğdı. Annesi muzika ocası olup çalışa edi. 1991 senesinde Qırımnıñ Aqmescit şeerine kelgen soñ [[Qırım Yıldızları]]-91 yarışmasını qazandı.
+[[1986]] senesi [[Mayıs 7|mayısnıñ 7]] künü [[Özbekistan]]nıñ  paytahtı[[Taşkent]] şeerinde doğdı. Anası muzıka ocası olıp çalışa edi. 1991 senesinde [[Qırım]]nıñ [[Aqmescit]] şeerine kelgen soñ [[Qırım Yıldızları]]-91 yarışmasını qazandı.
 
-Aqmescit Sanat Mektebiniñ muzika sanatı ve horeografiya bölügini âla derece ile pitirip Kiev Devlet   Estrada ve Sirk Sanatı Kolecinde estrada yırcılığı oquvuna başladı.
+Aqmescit Sanat Mektebiniñ muzıka sanatı ve horeografiya bölügini alâ derece ile bitirip Kiev Devlet Estrada ve Tsirk Sanatı Kolecinde estrada yırcılığı oquvına başladı.
 
-Lenara Osmanova, Devlet Medeniyet ve Sanat İdaresi Akademiyası 5ci kursunda talebelikke devam ete.
+Lenara Osmanova, Devlet Medeniyet ve Sanat İdaresi Akademiyası 5-nci kursunda talebelikke devam ete.
 
-5 Fevral 2007 tarihinde resmiy olaraq Qırım Muhtar Cumhuriyeti nam qazangan artisti unvanına sahip oldu.
+2007 s. fevral 5 tarihında resmiy olaraq Qırım Muhtar Cumhuriyeti nam qazangan artisti unvanına saip oldı.
 
 == Bağlantılar ==
-
 * http://www.lenara.com.ua
 
-[[Kategoriya:Qırımtatar yırcılar]]
+[[Kategoriya:Qırımtatar yırcıları]]
